--- a/src/targets/common.ini
+++ b/src/targets/common.ini
@@ -29,9 +29,7 @@ build_flags =
 	-D PLATFORM_ESP32=1
 	-D CONFIG_TCPIP_LWIP=1
 src_filter = ${common_env_data.src_filter} -<ESP8266*.*> -<STM32*.*>
-lib_deps = 
-	NeoPixelBus
-	https://github.com/lemmingDev/ESP32-BLE-Gamepad.git#NimBLE
+lib_deps = NeoPixelBus
 
 
 # ------------------------- COMMON ESP82xx DEFINITIONS -----------------
