--- a/src/targets/common.ini
+++ b/src/targets/common.ini
@@ -19,7 +19,7 @@ build_flags_rx = -DTARGET_RX=1 ${common_env_data.build_flags}
 
 # ------------------------- COMMON ESP32 DEFINITIONS -----------------
 [env_common_esp32]
-platform = espressif32@3.2.0
+platform = espressif32@3.3.2
 board = esp32dev
 upload_speed = 460800
 monitor_speed = 460800
@@ -36,7 +36,7 @@ lib_deps =
 
 # ------------------------- COMMON ESP82xx DEFINITIONS -----------------
 [env_common_esp82xx]
-platform = espressif8266@3.0.0
+platform = espressif8266@3.2.0
 board = esp8285
 build_flags =
 	-D PLATFORM_ESP8266=1
@@ -54,6 +54,8 @@ bf_upload_command =
 
 # ------------------------- COMMON STM32 DEFINITIONS -----------------
 [env_common_stm32]
+#platform = ststm32@13.0.0
+#platform = ststm32@14.2.0
 platform = ststm32@8.0.0
 board = bluepill_f103c8
 build_unflags = -Os
